[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[project]
name = "visionpy-sc"
version = "0.0.1"
description = "Signature Analysis and Visualization for Single-Cell RNA-seq"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Adam Gayoso"},
]
maintainers = [
    {name = "Adam Gayoso", email = "adamgayoso@berkeley.edu"},
]
urls.Documentation = "https://visionpy.readthedocs.io/"
urls.Source = "https://github.com/yoseflab/visionpy"
urls.Home-page = "https://github.com/yoseflab/visionpy"
dependencies = [
    "anndata",
    "scanpy",
    "click",
    "flask",
    "flask-compress",
    "leidenalg",
    "rich",
]

[project.optional-dependencies]
dev = [
    # CLI for bumping the version number
    "bump2version",
    "pre-commit"
]
doc = [
    "sphinx>=4,<5.3",
    "sphinx-book-theme",
    "myst-nb",
    "sphinxcontrib-bibtex>=1.0.0",
    "scanpydoc[typehints]>=0.7.4",
    # For notebooks
    "ipython!=8.7.0", # code highlighting issue
    "ipykernel",
    "sphinx-copybutton",
]
test = [
    "pytest",
    "pytest-cov",
    # For vscode Python extension testing
    "flake8",
    "black",
]

[project.scripts]
visionpy = "visionpy.api:_start_vision_cli"

[tool.hatch.build.targets.wheel]
packages = ['src/visionpy']

[tool.coverage.run]
source = ["visionpy"]
omit = [
    "**/test_*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
profile = "black"
skip_glob = ["docs/*"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.jupytext]
formats = "ipynb,md"

[tool.cruft]
skip = [
    "tests",
    "src/**/__init__.py",
    "src/**/basic.py",
    "docs/api.md",
    "docs/changelog.md",
    "docs/references.bib",
    "docs/references.md",
    "docs/notebooks/example.ipynb"
]
